feat: nginx增加优化配置

--- a/nginx/volumes/conf.d/default.conf
+++ b/nginx/volumes/conf.d/default.conf
@@ -1,13 +1,31 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  yinpo.space;
+
+    root   /projects;
+    index  index.html index.htm;
+
+    rewrite ^(.*) https://$server_name$1 permanent;
 
     #access_log  /var/log/nginx/host.access.log  main;
+    location ~ ^/([^/]+)/.+$ {
+      if (-d $request_filename) {
+        add_header test_file_if test-$request_filename;
+        rewrite ^(/.+[^/])$ $1/index.html break; #加斜杠
+      }
+      add_header test_file test-$request_filename;
+      try_files $uri $uri/ $uri/index.html /$1/index.html?$args;
+      break;
+    }
 
     location / {
-        root   /projects;
-        index  index.html index.htm;
+      if (-d $request_filename) {
+        add_header test_root_if test-$request_filename;
+        rewrite ^(/.+[^/])$ $1/index.html break; #加斜杠
+      }
+      add_header test_root test-$request_filename;
+      try_files $uri $uri/ $uri/index.html =404;
     }
 
     #error_page  404              /404.html;
