--- a/nginx/volumes/conf.d/ssl.conf
+++ b/nginx/volumes/conf.d/ssl.conf
@@ -1,21 +1,43 @@
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     #配置HTTPS的默认访问端口为443。
     #如果未在此处配置HTTPS的默认访问端口，可能会造成Nginx无法启动。
     #如果您使用Nginx 1.15.0及以上版本，请使用listen 443 ssl代替listen 443和ssl on。
-    server_name yourdomain;
-    root html;
-    index index.html index.htm;
+
+    server_name yinpo.space;
+
+    root   /projects;
+    index  index.html index.htm;
+
+    # 数字证书
     ssl_certificate cert/8936122_cas.yinpo.space.pem;
+    # 服务器私钥
     ssl_certificate_key cert/8936122_cas.yinpo.space.key;
+    # 停止通信时，加密会话的有效期，在该时间段内不需要重新交换密钥
     ssl_session_timeout 5m;
+    # TLS握手时，服务器采用的密码套件
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     #表示使用的加密套件的类型。
     ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3; #表示使用的TLS协议的类型，您需要自行评估是否配置TLSv1.1协议。
+    # 开启由服务器决定采用的密码套件
     ssl_prefer_server_ciphers on;
 
+    location ~ ^/([^/]+)/.+$ {
+      if (-d $request_filename) {
+        add_header test_file_if test-$request_filename;
+        rewrite ^(/.+[^/])$ $1/index.html break; #加斜杠
+      }
+      add_header test_file test-$request_filename;
+      try_files $uri $uri/ $uri/index.html /$1/index.html?$args;
+      break;
+    }
+
     location / {
-        root /projects;  #Web网站程序存放目录。
-        index index.html index.htm;
+      if (-d $request_filename) {
+        add_header test_root_if test-$request_filename;
+        rewrite ^(/.+[^/])$ $1/index.html break; #加斜杠
+      }
+      add_header test_root test-$request_filename;
+      try_files $uri $uri/ $uri/index.html =404;
     }
 }
