--- a/nginx/volumes/nginx.conf
+++ b/nginx/volumes/nginx.conf
@@ -1,10 +1,19 @@
 user  nginx;
+
+# 自动根据CPU核心数调整Worker进程数量
 worker_processes  auto;
+# 每个Worker能打开的文件描述符，最少调整至1W以上，负荷较高建议2-3W
+worker_rlimit_nofile  20000;
+# CPU亲和机制
+worker_cpu_affinity auto;
 
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
 
 events {
+    # 使用epoll网络模型
+    use epoll;
+    # 调整每个Worker能够处理的连接数上限
     worker_connections  1024;
 }
 
@@ -18,12 +27,37 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
+    # 开启零拷贝机制
     sendfile        on;
-    #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    tcp_nodelay     on;
+    tcp_nopush      on;
 
-    gzip  on;
+    # 长连接数
+    keepalive 32;
+    # 每个长连接提供的最大请求数
+    keepalived_requests 100;
+    # 每个长连接没有新的请求时，保持的最长时间
+    keepalive_timeout 60s;
+
+    # 开启压缩机制
+    gzip on;
+    # 指定会被压缩的文件类型(也可自己配置其他类型)
+    gzip_types text/plain application/javascript text/css application/xml text/javascript image/jpeg image/gif image/png;
+    # 设置压缩级别，越高资源消耗越大，但压缩效果越好
+    gzip_comp_level 5;
+    # 在头部中添加Vary: Accept-Encoding（建议开启）
+    gzip_vary on;
+    # 处理压缩请求的缓冲区数量和大小
+    gzip_buffers 16 8k;
+    # 对于不支持压缩功能的客户端请求不开启压缩机制
+    gzip_disable "MSIE [1-6]\."; # 低版本的IE浏览器不支持压缩
+    # 设置压缩响应所支持的HTTP最低版本
+    gzip_http_version 1.1;
+    # 设置触发压缩的最小阈值
+    gzip_min_length 2k;
+    # 关闭对后端服务器的响应结果进行压缩
+    gzip_proxied off;
 
     include /etc/nginx/conf.d/*.conf;
 }
