--- a/nginx/.env
+++ b/nginx/.env
@@ -1,2 +1,6 @@
-COMPOSE_PROJECT_NAME=nginx
+COMPOSE_NAME=yinpo-nginx
 APP1_API_PORT=5000
+SERVICE_PROJECT_ROOT=/projects
+DOMAIN=yinpo.space www.yinpo.space
+CERT_KEY=www.yinpo.space.key
+CERT_PEM=www.yinpo.space.pem
