--- a/nginx/volumes/conf.d/cas.conf
+++ b/nginx/volumes/conf.d/cas.conf
@@ -4,15 +4,12 @@ server {
     #如果未在此处配置HTTPS的默认访问端口，可能会造成Nginx无法启动。
     #如果您使用Nginx 1.15.0及以上版本，请使用listen 443 ssl代替listen 443和ssl on。
 
-    server_name yinpo.space www.yinpo.space;
-
-    root   /projects;
-    index  index.html index.htm;
+    server_name cas.yinpo.space;
 
     # 数字证书
-    ssl_certificate cert/www.yinpo.space.pem;
+    ssl_certificate cert/cas.yinpo.space.pem;
     # 服务器私钥
-    ssl_certificate_key cert/www.yinpo.space.key;
+    ssl_certificate_key cert/cas.yinpo.space.key;
     # 停止通信时，加密会话的有效期，在该时间段内不需要重新交换密钥
     ssl_session_timeout 5m;
     # TLS握手时，服务器采用的密码套件
@@ -22,25 +19,8 @@ server {
     # 开启由服务器决定采用的密码套件
     ssl_prefer_server_ciphers on;
 
-    location ~ ^/([^/]*)/((?!index\.html$).)*$ {
-      add_header yinpo-localtion-file file-$request_filename;
-      try_files $uri $uri/ $uri/index.html /$1/index.html /404.html;
-    }
-
-    location / {
-      add_header yinpo-localtion-root file-$request_filename;
-      try_files $uri $uri/ $uri/index.html =404;
-    }
-
-    error_page  404               /404.html;
-
-    location = /404.html {
-      internal;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-
-    location = /50x.html {
-      internal;
+    location /api/ {
+      proxy_pass http://host.docker.internal:5000/;
+      break;
     }
 }
