增加请求限制

--- a/nginx/volumes/conf.d/api.conf
+++ b/nginx/volumes/conf.d/api.conf
@@ -19,7 +19,8 @@ server {
     # 开启由服务器决定采用的密码套件
     ssl_prefer_server_ciphers on;
 
-    location / {
+    # 请求路径为 api.yinpo.space/cas/
+    location /cas/ {
       proxy_pass http://host.docker.internal:5000/;
       break;
     }
