--- a/nginx/volumes/nginx.conf
+++ b/nginx/volumes/nginx.conf
@@ -33,6 +33,12 @@ http {
     tcp_nodelay     on;
     tcp_nopush      on;
 
+    # 防止对 Web 服务的过度请求，限制内存、速度、连接数
+    limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=5r/s;
+    limit_req zone=req_limit_per_ip burst=10 nodelay;
+    limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
+    limit_conn conn_limit_per_ip 15;
+
     # 开启压缩机制
     gzip on;
     # 指定会被压缩的文件类型(也可自己配置其他类型)
