feat: add networks

--- a/mysql/.env
+++ b/mysql/.env
@@ -1,3 +1,5 @@
 MYSQL_ROOT_PASSWORD=1234
-MYSQL_DATABASE=CAS_db
+MYSQL_DATABASE=CAS_db # initial database
 MYSQL_PORT=13306
+
+COMPOSE_PROJECT_NAME=database
