--- a/nginx/volumes/templates/api.conf.template
+++ b/nginx/volumes/templates/api.conf.template
@@ -21,6 +21,17 @@ server {
 
     # 请求路径为 api.yinpo.space/cas/
     location /cas/ {
+      add_header 'Access-Control-Allow-Origin' 'https://yinpo.space' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, HEAD, OPTIONS, DELETE' always;
+      add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type' always;
+      add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+      if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+      }
       proxy_pass http://host.docker.internal:${APP1_API_PORT}/;
       break;
     }
