fix: Optimize usage configuration

--- a/nginx/.env
+++ b/nginx/.env
@@ -1,6 +1,14 @@
-COMPOSE_NAME=yinpo-nginx
-APP1_API_PORT=5753
-SERVICE_PROJECT_ROOT=/projects
-DOMAIN=yinpo.space www.yinpo.space
-CERT_KEY=www.yinpo.space.key
-CERT_PEM=www.yinpo.space.pem
+SERVICE_PROJECT_ROOT=./projects
+
+DOMAIN_MAIN="yinpo.space www.yinpo.space" # 可以有多个
+CERT_KEY_MAIN=www.yinpo.space.key
+CERT_PEM_MAIN=www.yinpo.space.pem
+
+DOMAIN_API=api.yinpo.space # 只能有一个
+CERT_KEY_API=api.yinpo.space.key
+CERT_PEM_API=api.yinpo.space.pem
+
+# shell env
+SSL_ONLY=true
+API_PORT_LIST=5753,5754      # 多个用逗号分隔
+API_LOCATION_LIST=/api,/api2 # 多个用逗号分隔
