--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,10 +1,11 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  ${DOMAIN};
+    server_name  ${DOMAIN_MAIN};
 
     root   /projects;
     index  index.html index.htm;
 
-    rewrite ^(.*) https://$server_name$1 permanent;
+    # SHELL_CONTROL_SSL_ONLY_START
+    # SHELL_CONTROL_SSL_ONLY_END
 }
